[package]
name = "apekey"
description = "List and browse your XMonad keymap"
version = "0.1.0"
authors = ["pierre <dommerc.pierre@gmail.com>"]
edition = "2021"
repository = "https://github.com/doums/apekey"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
iced = { version = "0.6", features = ["tokio"] }
iced_native = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ['env-filter'] }
clap = { version = "3.2", features = ["derive"] }
regex = "1.6.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
toml = "0.5"
anyhow = "1.0"
fuzzy-matcher = "0.3"
once_cell = "1.16.0"
