[package]
name = "apekey"
description = "List and browse your XMonad keymap"
version = "0.2.0"
authors = ["pierre <dommerc.pierre@gmail.com>"]
edition = "2021"
repository = "https://github.com/doums/apekey"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1", features = ["fs", "io-util"] }
iced = { version = "0.6", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
nom = { version = "7.1.2", features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ['env-filter'] }
clap = { version = "4.1", features = ["derive"] }
regex = "1.6.0"
dotenv = "0.15.0"
toml = "0.5"
eyre = "0.6"
fuzzy-matcher = "0.3"
once_cell = "1.16.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
